--- a/DataLayer/Models/AminWeb.tt
+++ b/DataLayer/Models/AminWeb.tt
@@ -315,7 +315,6 @@ public class CodeStringGenerator
     {
         return string.Format(
             CultureInfo.InvariantCulture,
-            "[MetadataType(typeof({2}))]" + Environment.NewLine +
             "{0} {1}partial class {2}{3}",
             Accessibility.ForType(entity),
             _code.SpaceAfter(_code.AbstractOption(entity)),
@@ -426,9 +425,7 @@ public class CodeStringGenerator
         return inHeader == string.IsNullOrEmpty(_code.VsNamespaceSuggestion())
             ? string.Format(
                 CultureInfo.InvariantCulture,
-                "{0}using System;{1}" + Environment.NewLine +
-                "using System.ComponentModel.DataAnnotations;" + Environment.NewLine +
-                "using DataLayer.MetaData;" + Environment.NewLine +
+                "{0}using System;{1}" +
                 "{2}",
                 inHeader ? Environment.NewLine : "",
                 includeCollections ? (Environment.NewLine + "using System.Collections.Generic;") : "",
