--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -93,3 +93,163 @@ backdrop-filter: saturate(80%);
     content: '★';
     color: #fc0;
     text-shadow: 0 0 1px #333; }
+
+/*#region name*/
+/*#endregion */
+/*#region Global */
+/*#endregion */
+/*#region difficulty */
+/*#endregion */
+/*#region Card*/
+/*#endregion */
+/*#region Scrollbar */
+/*#endregion */
+/*#region shadow */
+/*#endregion */
+/*#region Material  */
+/*#endregion */
+/*
+backdrop-filter: blur(2px);
+backdrop-filter: brightness(60%);
+backdrop-filter: contrast(40%);
+backdrop-filter: drop-shadow(4px 4px 10px blue);
+backdrop-filter: grayscale(30%);
+backdrop-filter: hue-rotate(120deg);
+backdrop-filter: invert(70%);
+backdrop-filter: opacity(20%);
+backdrop-filter: sepia(90%);
+backdrop-filter: saturate(80%);
+*/
+.space {
+  width: 100vw;
+  height: 4vw; }
+
+.space-double {
+  width: 100vw;
+  height: 8vw; }
+
+.space-half {
+  width: 100vw;
+  height: 2vw; }
+
+@media only screen and (max-device-width: 480px) {
+  .space-half {
+    width: 100vw;
+    height: 3vh; }
+  .space {
+    width: 100vw;
+    height: 6vh; }
+  .space-double {
+    width: 100vw;
+    height: 9vh; } }
+
+.space-nav {
+  width: 100vw;
+  height: 80px; }
+
+/*#region Alignment */
+.row {
+  display: flex;
+  flex-direction: row; }
+
+.row-reverse {
+  display: flex;
+  flex-direction: row-reverse; }
+
+.column {
+  display: flex;
+  flex-direction: column; }
+
+.column-reverse {
+  display: flex;
+  flex-direction: column-reverse; }
+
+.flex-1 {
+  flex: 1; }
+
+.flex-2 {
+  flex: 2; }
+
+.flex-3 {
+  flex: 3; }
+
+.flex-4 {
+  flex: 4; }
+
+.flex-5 {
+  flex: 5; }
+
+.flex-6 {
+  flex: 6; }
+
+.flex-7 {
+  flex: 7; }
+
+.flex-8 {
+  flex: 8; }
+
+.flex-9 {
+  flex: 9; }
+
+.flex-auto {
+  flex: auto; }
+
+.fillwidth {
+  min-width: 100%;
+  height: auto; }
+
+.fillheight {
+  min-height: 100%;
+  width: auto; }
+
+/*#endregion */
+.full-width {
+  width: 100vw; }
+
+.full-height {
+  height: 100vh; }
+
+.overflow-visible {
+  overflow: visible !important; }
+
+.overflow-hidden {
+  overflow: hidden !important; }
+
+.text-center {
+  text-align: center !important; }
+
+.top-nav {
+  padding: 15px 20px; }
+  .top-nav > nav a {
+    margin: auto 0;
+    margin-right: 16px;
+    color: #505050;
+    -moz-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    transition: all ease 0.3s; }
+  .top-nav > nav a:hover {
+    color: #F94646; }
+  .top-nav > .logo {
+    width: 50px; }
+
+.drop-body {
+  background: #fff;
+  border: 1px solid #ddd;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px; }
+
+#navDrop {
+  width: 124px; }
+  #navDrop ul li {
+    margin: 8px 0; }
+
+.success {
+  color: #73DA42 !important; }
