--- a/AminWeb/Views/Shared/Error.cshtml
+++ b/AminWeb/Views/Shared/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="fa">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Error</title>
