Index, search video block

--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -219,19 +219,45 @@ backdrop-filter: saturate(80%);
   text-align: center !important; }
 
 .top-nav {
-  padding: 15px 20px; }
+  padding: 15px 0 0 0;
+  position: fixed;
+  width: 100vw;
+  z-index: 2000;
+  backdrop-filter: blur(4px); }
   .top-nav > nav a {
     margin: auto 0;
-    margin-right: 16px;
-    color: #505050;
-    -moz-transition: all ease 0.3s;
-    -o-transition: all ease 0.3s;
-    -webkit-transition: all ease 0.3s;
-    transition: all ease 0.3s; }
-  .top-nav > nav a:hover {
-    color: #F94646; }
+    margin-right: 16px; }
   .top-nav > .logo {
     width: 50px; }
+
+a {
+  color: #505050;
+  -moz-transition: all ease 0.3s;
+  -o-transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  transition: all ease 0.3s; }
+
+a:hover {
+  color: #F94646; }
+
+.bottom-nav {
+  position: fixed;
+  padding: 20px 0 12px 0;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  background: #fff;
+  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
+  -moz-border-radius: 32% 32% 0 0;
+  -webkit-border-radius: 32% 32% 0 0;
+  border-radius: 32% 32% 0 0;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/ }
+  .bottom-nav ul li {
+    margin: auto; }
 
 .drop-body {
   background: #fff;
@@ -247,9 +273,244 @@ backdrop-filter: saturate(80%);
   box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px; }
 
 #navDrop {
-  width: 124px; }
+  width: 152px; }
   #navDrop ul li {
     margin: 8px 0; }
 
 .success {
   color: #73DA42 !important; }
+
+.biscuit {
+  width: 100vw;
+  height: auto; }
+
+.video-block {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  border: 1px solid #c1c1c1;
+  height: 360px;
+  width: 280px;
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.24); }
+  .video-block .top .badges {
+    padding: 8px;
+    position: absolute; }
+    .video-block .top .badges > li {
+      padding: 6px;
+      margin-right: 8px;
+      background: #fff;
+      -moz-border-radius: 12px 12px 12px 12px;
+      -webkit-border-radius: 12px 12px 12px 12px;
+      border-radius: 12px 12px 12px 12px;
+      /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/ }
+      .video-block .top .badges > li > img {
+        height: 24px;
+        width: 24px; }
+  .video-block .top .thumbnail {
+    height: 200px;
+    -moz-border-radius: 8px 8px 0 0;
+    -webkit-border-radius: 8px 8px 0 0;
+    border-radius: 8px 8px 0 0;
+    /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/ }
+  .video-block .content {
+    padding: 10px 10px 0 10px;
+    height: 96px; }
+    .video-block .content .title {
+      font-size: 17px;
+      margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      /* number of lines to show */
+      -webkit-box-orient: vertical;
+      direction: rtl; }
+    .video-block .content .desciption {
+      margin: 4px 0 0 0;
+      height: 36px;
+      font-size: 12px;
+      color: #5F5F5F;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      /* number of lines to show */
+      -webkit-box-orient: vertical; }
+    .video-block .content a.tutor {
+      margin-top: 4px;
+      font-size: 12px; }
+  .video-block hr {
+    margin: 10px 0; }
+  .video-block .bottom {
+    padding: 0 10px; }
+    .video-block .bottom .price {
+      font-size: 18px;
+      color: #73DA42; }
+    .video-block .bottom .star-container > span {
+      margin-top: auto;
+      width: 24px;
+      font-size: 12px; }
+
+.video-grid {
+  display: grid;
+  grid-template-rows: auto;
+  grid-gap: .6em;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
+  .video-grid > .video-block {
+    margin-left: auto; }
+
+.side-category {
+  width: 280px;
+  z-index: 1000;
+  padding: 16px;
+  background: #fff;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  border: 1px solid #D4D4D4;
+  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px; }
+
+.side-category-placeholder {
+  width: 314px; }
+
+@media only screen and (max-width: 724px) {
+  .side-category, .side-category-placeholder {
+    display: none !important; }
+  .video-grid > .video-block {
+    margin-left: auto;
+    margin-right: auto; } }
+
+.search-box {
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  padding: 8px 12px;
+  background: #EFEFEF;
+  border: 1px solid #DDDDDD; }
+  .search-box input {
+    border: none;
+    background: transparent;
+    width: 92%; }
+  .search-box button {
+    color: #B9B9B9; }
+
+/*@media only screen and (max-width: 724px) {
+    .side-category, .side-category-placeholder {
+        display: none !important;
+    }
+
+    $video-block-height: 164px;
+    $video-block-width: 420px;
+
+    .video-block {
+        @include row-reverse;
+        height: $video-block-height;
+        width: $video-block-width;
+        margin: auto;
+
+        .top {
+            flex: 4;
+
+            .badges {
+                padding: 8px;
+                position: absolute;
+
+                > li {
+                    padding: 6px;
+                    margin-right: 8px;
+                    background: #fff;
+                    @include border-radius(12px,12px,12px,12px);
+
+                    > img {
+                        height: 24px;
+                        width: 24px;
+                    }
+                }
+            }
+
+            .thumbnail {
+                width: 230px !important;
+                height: $video-block-height;
+                @include border-radius(8px,8px,0,0);
+            }
+        }
+
+        .text {
+            flex: 1;
+        }
+
+        .content {
+            padding: 10px 10px 0 10px;
+            height: 100px;
+
+            .title {
+                font-size: 17px;
+                margin: 0;
+                @include max-line(1);
+            }
+
+            .desciption {
+                margin: 4px 0 0 0;
+                height: 36px;
+                font-size: 12px;
+                color: #5F5F5F;
+                @include max-line(2);
+            }
+
+            a.tutor {
+                margin-top: 4px;
+                font-size: 12px;
+            }
+        }
+
+        hr {
+            margin: 10px 0;
+        }
+
+        .bottom {
+            padding: 0 10px;
+
+            .price {
+                font-size: 18px;
+                color: #73DA42;
+            }
+
+            .star-container {
+
+                > span {
+                    margin-top: auto;
+                    width: 24px;
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    .video-grid {
+        @include grid($video-block-width);
+
+        > .video-block {
+            margin-left: auto;
+        }
+    }
+}*/
