--- a/AminWeb/Content/Styles/_layout.scss
+++ b/AminWeb/Content/Styles/_layout.scss
@@ -32,9 +32,11 @@
     }
 }
 
+$nav-height: 80px;
+
 .space-nav {
     width: 100vw;
-    height: 80px;
+    height: $nav-height;
 }
 
 /*#region Alignment */
